pxc/tests/test_019_thread/thrtest3.px
namespace thrtest3;
import common -;
import thread -;

struct my_thread_obj(int x0, int y0, io::io const& iop0) {
  int x = x0;
  int y = y0;
  io::io iop = iop0;
  function void main() {
    io::file::file stdout = io::standard::get_stdout(iop);
    io::standard::file_println(stdout, "my thread main");
    io::standard::file_println(stdout, x);
  }
}

thread thr = create_thread(my_thread_obj(123, 456, io::system));
  // error: my_thread_obj is not threaded
thr.join();

